# learning-axum

./: Cargo.toml  README.md
src/: main.rs
src/users/: extension.rs  interactive.rs  jwt.rs  map_json.rs  middleware.rs  mod.rs  path_extractor.rs  status_code.rs  templates.rs  tree.rs  validate_json.rs
static_folder/: 404.html  asset-manifest.json  index.html  sample.html
static_folder/static/js/: 207.8f40b9c6.chunk.js  244.8c914124.chunk.js  349.b728b341.chunk.js  424.ca5bbeac.chunk.js  458.109bcdcf.chunk.js  675.a0fcdb14.chunk.js  729.2459e7cd.chunk.js  730.c63d2227.chunk.js  778.8d4f0ed1.chunk.js  822.0ae666a1.chunk.js  959.dcf6ee9b.chunk.js  987.9d00e79b.chunk.js  main.d323f943.js  main.d323f943.js.LICENSE.txt
templates/: sample.html
