[package]
name = "learning-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1.2"
serde = { version ="1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tower = "0.4.13"
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features= ["time", "local-time"] }
time = { version = "0.3.36", features = ["macros"] }
rand = "0.8.5"
validator = { version = "0.18.1", features = ["derive"] }

tower-http = { version = "0.5.2" , features = ["fs"]}